src/styles/global.scss
@use "theme";
@use "typography";
@use "code";
@use "button";
@use "layout";
@use "borders";

* {
  box-sizing: border-box;
  margin: 0;
}

:root {
  --max-width: calc(100vw - 2rem);
}

@media (min-width: 576px) {
  :root {
    --max-width: 540px;
  }
}

@media (min-width: 768px) {
  :root {
    --max-width: 720px;
  }
}

@media (min-width: 992px) {
  :root {
    --max-width: 930px;
  }
}

@media (min-width: 1200px) {
  :root {
    --max-width: 1170px;
  }
}

@media (min-width: 1400px) {
  :root {
    --max-width: 1370px;
  }
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-family: var(--font-sans-serif);
  font-size: 16px;
  line-height: 1.6;
}

nav ul {
  list-style: none;
  padding: 0;
}

ol:not(.list-inline),
ul:not(.list-inline),
dl:not(.list-inline) {
  margin-top: 0;
  margin-bottom: 1rem;
}

/* Supporting Content */

nav h4 {
  font-weight: 400;
  font-size: 1.25rem;
  margin: 0;
  margin-bottom: 1em;
}

hr {
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid var(--theme-divider);
}

.badge {
  display: inline-block;
  color: white;
  text-transform: uppercase;
  font-size: 10px;
  font-weight: 600;
  line-height: 1;
  border-radius: 10rem;
  background-color: var(--theme-button);
  padding: 4px 8px;
}

.badge-info {
  color: var(--theme-text-dim);
}

.badge-accent {
  color: #fff;
  background-color: var(--theme-accent);
}

.collapse:not(.show) {
  display: none;
}

.collapsing {
  height: 0;
  overflow: hidden;
  position: relative;
  transition: height 250ms ease-in-out;
}

.heading-link {
  opacity: 0;
  font-size: 16px;
  margin-left: 16px;
  padding: 4px;
  color: var(--theme-text-dim);

  &:hover {
    color: var(--theme-text-secondary);
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  &:hover {
    & .heading-link {
      opacity: 1;
    }
  }
}

table,
th,
td {
  border: 1px solid var(--theme-table-border);
  border-collapse: collapse;
  padding: 10px 10px;
  margin-top: 20px;
  margin-bottom: 20px;
}

table {
  display: block;
  max-width: fit-content;
  overflow-x: auto;
  padding: 0;
  border: none;
}

th {
  background-color: var(--theme-th-bg);
}

/* Scrollbar */

/* Firefox */
body {
  scrollbar-width: thin;
  scrollbar-color: var(--theme-text-dimmer) var(--theme-divider);
}

/* width */
::-webkit-scrollbar {
  width: 0.5rem;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--theme-divider);
  border-radius: 1rem;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--theme-text-dimmer);
  border-radius: 1rem;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--theme-text-dim);
}

/* Buttons */
::-webkit-scrollbar-button {
  display: none;
}
/* Scrollbar - End */

/* Screenreader Only Text */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.focus\:not-sr-only:focus,
.focus\:not-sr-only:focus-visible {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}

:target {
  scroll-margin: calc(var(--theme-sidebar-offset, 5rem) + 2rem) 0 2rem;
}

